--- a/estilos.css
+++ b/estilos.css
@@ -11,6 +11,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: lightcyan;
 }
 
 h1 {
@@ -24,7 +25,8 @@ p {
     font-family: marydale, sans-serif;
     font-weight: 700;
     font-style: normal;
-    font-size: 16pt;
+    font-size: 22pt;
+    line-height:24pt;
 }
 
 #contenedor{
@@ -51,17 +53,35 @@ p {
 #secccionUser {
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    background-color: rgb(132, 224, 203); 
-    margin-top: 100px;
+    flex-direction: column;
+    background-color: rgba(132, 229, 233, 0.664); 
+    margin-bottom: 100px;
     width: 1024px;
     height: 256px;
     border-radius: 30px;
-    border: 5px solid black;
     text-align: center;
 }
 
+#botones {
+    display: flex;
+    width: 100%;
+    height: 50%;
+    flex-direction: row;
+    align-items:flex-end;
+    justify-content:space-around;
+}
 
+#instrucciones {
+    display: flex;
+    width: 100%;
+    height: 50%;
+    flex-direction: row;
+    align-items:flex-start;
+    justify-content:space-around;
+
+}
+
+/*
 #borrar {
     height: 50px;
     width: 100px;
@@ -69,12 +89,12 @@ p {
     margin-left: 100px;
     border-radius: 10px;
 }
+*/
 
 #crear {
     height: 50px;
     width: 100px;
     font-size: 16pt;
-    margin-left: 100px;
     border-radius: 10px;
 }
 
@@ -84,12 +104,11 @@ p {
     background-color: white;
     border-radius: 10px;
     border: 1px solid black;
-    margin-left: 100px;
 }
 
 #barra::-moz-range-thumb {
     width: 25px;
     height: 45px;
-    background-color: rgb(50, 164, 168);
+    background-color: rgba(132, 229, 233, 0.664);
     cursor: pointer;
   }
