--- a/estilos.css
+++ b/estilos.css
@@ -46,6 +46,7 @@ p {
 
 .celda {
     background-color: var(--colorBase);
+    border: 1px dotted black
 
 
 }
@@ -71,6 +72,18 @@ p {
     justify-content:space-around;
 }
 
+#numCeldas {
+    display: flex;
+    border-radius: 10px;
+    background-color: white;
+    height: 50px;
+    width: 50px;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+
 #instrucciones {
     display: flex;
     width: 100%;
@@ -78,7 +91,6 @@ p {
     flex-direction: row;
     align-items:flex-start;
     justify-content:space-around;
-
 }
 
 /*
@@ -93,7 +105,7 @@ p {
 
 #crear {
     height: 50px;
-    width: 100px;
+    width: 200px;
     font-size: 16pt;
     border-radius: 10px;
 }
@@ -101,6 +113,7 @@ p {
 #barra {
     appearance: none;   /* reseteamos los  styles estilos css default */
     height: 50px;
+    width: 200px;
     background-color: white;
     border-radius: 10px;
     border: 1px solid black;
